blink scroll: propagate MouseExitedContentArea properly

This appears to have been just a typo in ScrollableArea::MouseExitedContentArea.
It has no visible effect because the guts of NSScrollerImp follow the same
code path for enter and exit right now, but obviously that isn't guaranteed.

Bug: 914844
Change-Id: I6008987dd1d2b3b37739a90ca0dad414d58deb27
Reviewed-on: https://chromium-review.googlesource.com/c/1443515
Reviewed-by: Robert Flack <flackr@chromium.org>
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#627103}
Former-commit-id: 0d68d023c9e10816366e22639b37d8a0ff58c754